<resources>
    <string name="app_name">Success</string>
    <string name="Username" />
    <string name="Password">Password</string>
    <string name="fullname">First name</string>
    <string name="Lastname">Last name</string>
    <string name="email">Email</string>
    <string name="cpass">Confirme password</string>
    <string name="title_activity_toolbar">toolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_toolbar1">toolbar1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_activity_home1">home1</string>
</resources>